--- a/hackerstudent/src/main/res/layout/layout_image_course.xml
+++ b/hackerstudent/src/main/res/layout/layout_image_course.xml
@@ -7,7 +7,12 @@
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lotti_file"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="270dp"
+        android:layout_margin="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="true"
         app:lottie_loop="true" />
 
