Change Layout and bottom sheet design status:Successfully

--- a/hackerstudent/src/main/res/layout/feature_course_layout.xml
+++ b/hackerstudent/src/main/res/layout/feature_course_layout.xml
@@ -21,8 +21,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/course_recycle"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="10dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
