--- a/hackerstudent/src/main/res/layout/course_images.xml
+++ b/hackerstudent/src/main/res/layout/course_images.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#EBEBF5"
+    android:layout_margin="10dp"
     android:layout_height="wrap_content">
 
     <ImageView
