--- a/hackerstudent/src/main/res/layout/custom_progress_bar_layout.xml
+++ b/hackerstudent/src/main/res/layout/custom_progress_bar_layout.xml
@@ -21,6 +21,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:fontFamily="@font/average_sans"
         android:gravity="center"
         android:text="@string/pleas_wait"
