--- a/hackerstudent/src/main/res/layout/course_images.xml
+++ b/hackerstudent/src/main/res/layout/course_images.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#EBEBF5"
+    android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    android:layout_height="wrap_content">
+    android:background="#EBEBF5">
 
     <ImageView
         android:id="@+id/Course_thumbnail"
@@ -49,7 +49,7 @@
             android:id="@+id/roundedSenderTextView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fontFamily="@font/patrick_hand"
+            android:fontFamily="@font/arbutus_slab"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="20sp"
@@ -65,22 +65,25 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
         android:fontFamily="@font/allerta"
+        android:text="@string/Teacher_name"
         android:textColor="@color/black"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/teacher_profile_Name"
         app:layout_constraintLeft_toRightOf="@id/teacher_profile_Name"
         app:layout_constraintTop_toTopOf="@id/teacher_profile_Name"
-        app:layout_constraintVertical_bias=".3"
-        android:text="@string/Teacher_name" />
+        app:layout_constraintVertical_bias=".3" />
 
     <RatingBar
         android:id="@+id/rating_bar_style"
-        style="@style/CustomRatingBarStyle"
+        style="@android:style/Widget.Material.RatingBar.Small"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:padding="5dp"
-        android:rating="3.5"
+        android:numStars="5"
+        android:progressBackgroundTint="@android:color/black"
+        android:progressTint="@color/cheery_red"
+        android:rating="1.3"
+        android:stepSize="0.5"
         app:layout_constraintLeft_toLeftOf="@id/teacher_profile_Name"
         app:layout_constraintTop_toBottomOf="@id/teacher_profile_Name" />
 
