--- a/hackerstudent/src/main/res/layout/title_qoute_framgent.xml
+++ b/hackerstudent/src/main/res/layout/title_qoute_framgent.xml
@@ -17,7 +17,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="All Men Must Die The Line In The North" />
+        tools:text="All Men Must Die The Line In The North"
+        tools:visibility="gone" />
 
     <TextView
         android:id="@+id/writer_title"
@@ -30,5 +31,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/quote_title"
-        tools:text="- Anuj Kumar Rai" />
+        tools:text="- Anuj Kumar Rai"
+        tools:visibility="gone" />
+
+    <TextView
+        android:id="@+id/heading_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:fontFamily="@font/allerta"
+        android:textColor="@color/forget_text_color"
+        android:visibility="gone"
+        android:textSize="11sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Account"
+        tools:visibility="visible" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
