--- a/app/src/main/res/menu/nanny_mode_drawer.xml
+++ b/app/src/main/res/menu/nanny_mode_drawer.xml
@@ -19,6 +19,10 @@
                     android:icon="@drawable/ic_baseline_library_music_24"
                     android:title="@string/poem" />
                 <item
+                    android:id="@+id/speedBoosterFragment"
+                    android:icon="@drawable/ic_baseline_memory_24"
+                    android:title="@string/memory_booster" />
+                <item
                     android:id="@+id/toysFragment"
                     android:icon="@drawable/ic_baseline_toys_24"
                     android:title="@string/toys" />
