Add Custom Dialog Update status:Successfully

--- a/hackerstudent/src/main/res/layout/title_qoute_framgent.xml
+++ b/hackerstudent/src/main/res/layout/title_qoute_framgent.xml
@@ -41,8 +41,9 @@
         android:layout_margin="10dp"
         android:fontFamily="@font/allerta"
         android:textColor="@color/forget_text_color"
-        android:visibility="gone"
         android:textSize="11sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Account"
