--- a/hackerstudent/src/main/res/layout/client_actitvity_main.xml
+++ b/hackerstudent/src/main/res/layout/client_actitvity_main.xml
@@ -24,13 +24,13 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         app:backgroundColor="#B5B5B8"
-        app:itemFontFamily="@font/allerta"
-        app:indicatorColor="@color/black"
-        app:textColor="@color/white"
         app:iconTint="@color/white"
+        app:indicatorColor="@color/black"
+        app:itemFontFamily="@font/allerta"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/nav_bottom_menu" />
+        app:menu="@menu/nav_bottom_menu"
+        app:textColor="@color/white" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
