--- a/hackerstudent/src/main/res/layout/home_screen_framgment.xml
+++ b/hackerstudent/src/main/res/layout/home_screen_framgment.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.hackerstudent.ui.HomeScreenFragment">
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/no_internet"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:lottie_autoPlay="true"
+        android:visibility="gone"
+        app:lottie_loop="true" />
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/main_recycleView"
