Added User update first ,last name and Password status:Successfully

--- a/hackerstudent/src/main/res/layout/profile_framgnet.xml
+++ b/hackerstudent/src/main/res/layout/profile_framgnet.xml
@@ -51,7 +51,10 @@
                     android:id="@+id/log_out_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="2dp"
+                    android:scaleType="fitXY"
                     android:background="@drawable/ic_login"
                     android:backgroundTint="@color/forget_text_color"
                     android:contentDescription="@string/app_login_btn"
