Add Explore Fragment and Toolbar status Successfully

--- a/hackerstudent/src/main/res/layout/user_profile_section.xml
+++ b/hackerstudent/src/main/res/layout/user_profile_section.xml
@@ -21,10 +21,10 @@
         android:id="@+id/title_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/patrick_hand"
+        android:fontFamily="@font/arbutus_slab"
         android:gravity="center"
         android:textColor="@color/black"
-        android:textSize="30sp"
+        android:textSize="27sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="@id/image_holder"
         app:layout_constraintRight_toRightOf="@id/image_holder"
