--- a/hackerstudent/src/main/res/values/colors.xml
+++ b/hackerstudent/src/main/res/values/colors.xml
@@ -24,5 +24,7 @@
     <color name="light_my_color">#F5A59F</color>
     <color name="light_green">#fb7268</color>
     <color name="my_color">#fb7268</color>
+    <color name="my_color_Accent">#0B3148</color>
+    <color name="my_color_dark_Accent">#0E2A3B</color>
 
 </resources>
