--- a/hackerstudent/src/main/res/drawable/alert_dialog_box.xml
+++ b/hackerstudent/src/main/res/drawable/alert_dialog_box.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/white" />
-    <corners android:radius="20dp" />
-    <padding
-        android:bottom="20dp"
-        android:left="20dp"
-        android:right="20dp"
-        android:top="20dp" />
+    <corners
+        android:bottomLeftRadius="20dp"
+        android:bottomRightRadius="20dp" />
+    <stroke
+        android:width="2dp"
+        android:color="@color/black" />
 </shape>
