--- a/hackerstudent/src/main/res/layout/alert_dialog_layout.xml
+++ b/hackerstudent/src/main/res/layout/alert_dialog_layout.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:background="@drawable/alert_dialog_box">
+    android:layout_gravity="center">
 
 
     <com.google.android.material.textfield.TextInputLayout
