--- a/hackerstudent/src/main/res/values/preloaded_fonts.xml
+++ b/hackerstudent/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,7 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/arbutus_slab</item>
+        <item>@font/montserrat</item>
         <item>@font/patrick_hand</item>
     </array>
 </resources>
