--- a/hackerstudent/src/main/res/layout/explore_fragment.xml
+++ b/hackerstudent/src/main/res/layout/explore_fragment.xml
@@ -9,7 +9,10 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.AppBarLayout
@@ -51,7 +54,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"
-                    android:fontFamily="@font/montserrat"
+                    android:fontFamily="@font/montserrat_bold"
                     android:gravity="center"
                     android:text="@string/frag_exp"
                     android:textColor="@color/my_color_Accent"
@@ -70,7 +73,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="3dp"
                 android:background="@drawable/search_view_layout"
                 android:backgroundTint="@color/light_grey"
                 android:hint="@string/search_hint"
@@ -78,24 +81,58 @@
                 android:textSize="19sp"
                 app:drawableEndCompat="@drawable/ic_search" />
 
+            <LinearLayout
+                android:id="@+id/src_result_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:visibility="gone"
+                tools:visibility="visible">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:padding="4dp"
+                    android:text="@string/we_found_part_1"
+                    android:textSize="11sp" />
+
+                <TextView
+                    android:id="@+id/result_size"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:textColor="@color/my_color_dark_Accent"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    tools:text="20" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="4dp"
+                    android:text="@string/we_found_part_2"
+                    android:textSize="11sp" />
+
+            </LinearLayout>
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/product_layout"
+            android:id="@+id/course_layout_recycle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:listitem="@layout/course_item_layout" />
+
+        <!--<com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/course_Lottie"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/hacking_main_icon"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-    <!--<androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycle_view_main"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />-->
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
