--- a/hackerstudent/src/main/res/values/preloaded_fonts.xml
+++ b/hackerstudent/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/arbutus_slab</item>
         <item>@font/montserrat</item>
+        <item>@font/montserrat_bold</item>
         <item>@font/patrick_hand</item>
     </array>
 </resources>
