--- a/hackerstudent/src/main/res/layout/course_images.xml
+++ b/hackerstudent/src/main/res/layout/course_images.xml
@@ -84,6 +84,7 @@
         android:progressTint="@color/cheery_red"
         android:rating="1.3"
         android:stepSize="0.5"
+        android:secondaryProgressTint="@color/cheery_red"
         app:layout_constraintLeft_toLeftOf="@id/teacher_profile_Name"
         app:layout_constraintTop_toBottomOf="@id/teacher_profile_Name" />
 
