--- a/hackerstudent/src/main/res/layout/course_item_layout.xml
+++ b/hackerstudent/src/main/res/layout/course_item_layout.xml
@@ -55,17 +55,18 @@
         style="@android:style/Widget.Material.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:secondaryProgressTint="@color/cheery_red"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="3dp"
         android:numStars="5"
-        android:padding="3dp"
         android:progressBackgroundTint="@color/black"
         android:progressTint="@color/cheery_red"
-        android:rating="1.3"
+        android:rating="5"
         android:stepSize="0.5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/course_title_txt"
-        app:layout_constraintTop_toBottomOf="@id/course_title_txt" />
+        app:layout_constraintTop_toBottomOf="@id/course_title_txt"
+        tools:ignore="RtlSymmetry" />
 
 
     <TextView
