--- a/hackerstudent/src/main/res/layout/explore_fragment.xml
+++ b/hackerstudent/src/main/res/layout/explore_fragment.xml
@@ -64,19 +64,49 @@
                     app:layout_constraintLeft_toRightOf="@id/arrow_img"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <ImageView
+                    android:id="@+id/cart_layout_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_margin="4dp"
+                    android:contentDescription="@string/frag_exp"
+                    android:src="@drawable/ic_cart"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+                <TextView
+                    android:id="@+id/no_of_bookmark_course"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/bg_circle"
+                    android:backgroundTint="#C02026"
+                    android:paddingStart="2dp"
+                    android:paddingEnd="2dp"
+                    android:textColor="@color/white"
+                    android:textSize="11sp"
+                    android:visibility="gone"
+                    tools:visibility="visible"
+                    app:layout_constraintLeft_toLeftOf="@id/cart_layout_btn"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="9+"
+                    tools:ignore="RtlSymmetry" />
+
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <EditText
                 android:id="@+id/search_view_ed"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="3dp"
                 android:background="@drawable/search_view_layout"
                 android:backgroundTint="@color/light_grey"
+                android:fontFamily="@font/montserrat"
                 android:hint="@string/search_hint"
                 android:textColorHint="@color/forget_text_color"
                 android:textSize="18sp"
@@ -122,21 +152,21 @@
             android:id="@+id/course_layout_recycle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:listitem="@layout/course_item_layout" />
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/course_Lottie"
-            android:visibility="gone"
-            app:lottie_autoPlay="true"
-            app:lottie_loop="true"
-            android:scaleType="centerInside"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:scaleType="centerInside"
             android:src="@drawable/hacking_main_icon"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            android:visibility="gone"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
