--- a/hackerstudent/src/main/res/layout/profile_item_clicked.xml
+++ b/hackerstudent/src/main/res/layout/profile_item_clicked.xml
@@ -17,5 +17,27 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/app_home" />
+        tools:text="@string/app_home"
+        tools:visibility="gone" />
+
+    <TextView
+        android:id="@+id/course_req_txt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawablePadding="20dp"
+        app:drawableTint="@color/black"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center_vertical|start"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        android:visibility="gone"
+        app:drawableStartCompat="@drawable/ic_check"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Hell  All ITT sKILL"
+        tools:visibility="visible" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
