--- a/hackerstudent/src/main/res/layout/feature_course_layout.xml
+++ b/hackerstudent/src/main/res/layout/feature_course_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -16,7 +17,24 @@
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="@id/feature_title"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="gone" />
+
+    <TextView
+        android:id="@+id/recycle_title_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:fontFamily="@font/montserrat"
+        android:textColor="@color/black"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Hell Ji And How Are you good i'm good"
+        tools:visibility="visible" />
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/course_recycle"
@@ -29,6 +47,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/feature_title"
         app:layout_constraintRight_toRightOf="@id/feature_title"
-        app:layout_constraintTop_toBottomOf="@id/feature_title" />
+        app:layout_constraintTop_toBottomOf="@id/feature_title"
+        tools:visibility="gone" />
 
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/req_layout_recycle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:visibility="gone"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/recycle_title_text"
+        app:layout_constraintRight_toRightOf="@id/recycle_title_text"
+        app:layout_constraintTop_toBottomOf="@id/recycle_title_text"
+        tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
