--- a/hackerstudent/src/main/res/layout/title_qoute_framgent.xml
+++ b/hackerstudent/src/main/res/layout/title_qoute_framgent.xml
@@ -46,7 +46,107 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Account"
+        tools:text="Account" />
+
+
+    <TextView
+        android:id="@+id/avg_rating"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/montserrat_bold"
+        android:textColor="@color/black"
+        android:textSize="11sp"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="4.5"
+        tools:visibility="visible" />
+
+
+    <RatingBar
+        android:id="@+id/course_rating"
+        style="@android:style/Widget.Material.RatingBar.Small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
+        android:numStars="5"
+        android:progressBackgroundTint="@color/black"
+        android:progressTint="@color/cheery_red"
+        android:rating="5"
+        android:secondaryProgressTint="@color/cheery_red"
+        android:stepSize="0.5"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/avg_rating"
+        app:layout_constraintLeft_toRightOf="@id/avg_rating"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="RtlSymmetry"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/course_by_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/course_created"
+        android:textSize="12sp"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="@id/avg_rating"
+        app:layout_constraintTop_toBottomOf="@id/avg_rating"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/teacher_name_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:fontFamily="@font/montserrat_bold"
+        android:text="@string/Teacher_name"
+        android:textColor="@color/my_color_dark_Accent"
+        android:textSize="14sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/course_by_txt"
+        app:layout_constraintLeft_toRightOf="@id/course_by_txt"
+        app:layout_constraintTop_toTopOf="@id/course_by_txt"
+        app:layout_constraintVertical_bias=".5"
+        tools:visibility="visible" />
+
+
+    <TextView
+        android:id="@+id/lang_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="5dp"
+        android:drawablePadding="10dp"
+        android:gravity="center"
+        android:text="@string/lang_type"
+        android:textSize="12sp"
+        android:visibility="gone"
+        app:drawableStartCompat="@drawable/ic_language"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/course_by_txt"
+        tools:visibility="visible" />
+
+
+    <TextView
+        android:id="@+id/total_hrs_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="20dp"
+        android:drawablePadding="10dp"
+        android:gravity="center"
+        android:textSize="12sp"
+        android:visibility="gone"
+        app:drawableStartCompat="@drawable/ic_time"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lang_txt"
+        tools:text="243 hrs"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
