Improved Course Preview Layout status:Successfully

--- a/hackerstudent/src/main/res/layout/layout_image_course.xml
+++ b/hackerstudent/src/main/res/layout/layout_image_course.xml
@@ -19,36 +19,56 @@
         tools:visibility="gone" />
 
 
-    <com.potyvideo.library.AndExoPlayerView
+    <ImageView
         android:id="@+id/video_preview"
         android:layout_width="match_parent"
         android:layout_height="270dp"
         android:layout_margin="10dp"
+        android:contentDescription="@string/COURSE_preview"
+        android:scaleType="fitXY"
         android:visibility="gone"
-        app:andexo_aspect_ratio="aspect_16_9"
-        app:andexo_play_when_ready="false"
-        app:andexo_resize_mode="Fit"
-        app:andexo_show_controller="false"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/hacking_main_icon"
         tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/play_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_bold"
+        android:paddingTop="20dp"
+        android:text="@string/COURSE_preview"
+        android:textColor="@color/black"
+        android:textSize="25sp"
+        android:visibility="gone"
+        app:drawableTint="@color/forget_text_color"
+        app:drawableTopCompat="@drawable/ic_play_arrow"
+        app:layout_constraintBottom_toBottomOf="@id/video_preview"
+        app:layout_constraintLeft_toLeftOf="@id/video_preview"
+        app:layout_constraintRight_toRightOf="@id/video_preview"
+        app:layout_constraintTop_toTopOf="@id/video_preview"
+        app:layout_constraintVertical_bias=".5"
+        tools:visibility="visible" />
+
 
     <TextView
         android:id="@+id/title_describe_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="290dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:fontFamily="@font/arbutus_slab"
+        android:gravity="center"
         android:textColor="@color/black"
         android:textSize="26sp"
         android:textStyle="bold"
         android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="@id/video_preview"
         app:layout_constraintRight_toRightOf="@id/video_preview"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/video_preview"
         tools:text="Hello Ji How Are You Good  I'm Also Good And How About You"
         tools:visibility="visible" />
 
