Improved Video Layout status:Successfully

--- a/hackerstudent/src/main/res/navigation/user_nav_graph.xml
+++ b/hackerstudent/src/main/res/navigation/user_nav_graph.xml
@@ -64,6 +64,9 @@
         <argument
             android:name="video"
             app:argType="string" />
+        <argument
+            android:name="title"
+            app:argType="string" />
     </fragment>
     <action
         android:id="@+id/action_global_videoFragment"
