Adding User Paid Course status:Successfully

--- a/hackerstudent/src/main/res/menu/nav_bottom_menu.xml
+++ b/hackerstudent/src/main/res/menu/nav_bottom_menu.xml
@@ -10,6 +10,12 @@
         android:icon="@drawable/ic_explore"
         android:title="@string/frag_exp" />
 
+
+    <item
+        android:id="@+id/myCourseFragment"
+        android:icon="@drawable/ic_subscription"
+        android:title="@string/frag_sub" />
+
     <item
         android:id="@+id/profileFragment"
         android:icon="@drawable/ic_twotone_person_24"
